RST-2598 Text area

--- a/test/dummy/app/views/kitchen_sinks/new.html.erb
+++ b/test/dummy/app/views/kitchen_sinks/new.html.erb
@@ -10,6 +10,11 @@
     <% end %>
   </div>
 
+  <h2>Text Area</h2>
+  <div>
+    <%= f.govuk_text_area :text_area_value, label: { text: 'Text area value label'}, hint_text: 'Hint text' %>
+  </div>
+
 
 <% end %>
 
