RST-2667 GOVUK Email field

--- a/test/dummy/app/views/kitchen_sinks/new.html.erb
+++ b/test/dummy/app/views/kitchen_sinks/new.html.erb
@@ -50,6 +50,15 @@
     <% end %>
   </div>
 
+  <h2>Email Field</h2>
+  <div>
+    <% if show_hint? %>
+      <%= f.govuk_email_field :email_field_value, label: {text: 'Email field label'}, hint_text: 'Email field hint' %>
+    <% else %>
+      <%= f.govuk_email_field :email_field_value, label: {text: 'Email field label'} %>
+    <% end %>
+  </div>
+
 
 
 <% end %>
