--- a/test/dummy/app/views/kitchen_sinks/new.html.erb
+++ b/test/dummy/app/views/kitchen_sinks/new.html.erb
@@ -59,6 +59,16 @@
     <% end %>
   </div>
 
+  <h2>Check Boxes</h2>
+
+  <div>
+    <% if show_hint? %>
+      <%= f.govuk_collection_check_boxes :collection_check_boxes_value, [['post', 'Post'], ['email', 'Email']], :first, :last, label: { text: 'Collection check boxes label'}, hint_text: 'Collection check boxes hint' %>
+    <% else %>
+      <%= f.govuk_collection_check_boxes :collection_check_boxes_value, [['post', 'Post'], ['email', 'Email']], :first, :last, label: { text: 'Collection check boxes label'} %>
+    <% end %>
+  </div>
+
 
 
 <% end %>
