RST-2599 GOVUK Fieldset added and bundle updated

--- a/test/dummy/app/views/kitchen_sinks/new.html.erb
+++ b/test/dummy/app/views/kitchen_sinks/new.html.erb
@@ -69,6 +69,13 @@
     <% end %>
   </div>
 
+  <h2>Fieldset</h2>
+  <div>
+    <%= f.govuk_fieldset label: {text: 'Fieldset label'} do %>
+      <p>Fieldset inner content</p>
+    <% end %>
+  </div>
+
 
 
 <% end %>
