--- a/test/dummy/app/views/kitchen_sinks/new.html.erb
+++ b/test/dummy/app/views/kitchen_sinks/new.html.erb
@@ -1,5 +1,12 @@
 <h1>Kitchen Sink Demo Page</h1>
 <%= form_for @kitchen_sink, builder: EtGdsDesignSystem.form_builder_class do |f| %>
+
+  <h2>Error Summary</h2>
+  <div>
+    <%= f.govuk_error_summary 'Test error summary' %>
+  </div>
+
+
   <h2>Text Field</h2>
   <div>
     <% if show_hint? %>
