RST-4790 Error messages from API now shown to user whilst downloading

--- a/app/javascript/components/DropzoneUploader/stylesheet.scss
+++ b/app/javascript/components/DropzoneUploader/stylesheet.scss
@@ -5,6 +5,19 @@
     text-align: left;
     margin: 0px;
   }
+  .dz-preview {
+    &.dz-error {
+      .dz-error-message {
+        opacity: 1;
+        pointer-events: auto;
+        top: 85px;
+        width: 350px;
+      }
+      .dz-error-mark {
+        left: 65%;
+      }
+    }
+  }
 }
 .gds-dropzone-uploader-preview-template {
   display: none;
