--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -1,3 +1,4 @@
-$govuk-assets-path: "govuk-frontend/dist/govuk/assets/rebrand";
+$govuk-fonts-path: "govuk-frontend/dist/govuk/assets/fonts/";
+$govuk-images-path: "govuk-frontend/dist/govuk/assets/rebrand/images/";
 @import "govuk-frontend/dist/govuk/index";
 @import "dropzone/src/dropzone";
