RST-7433 - Fix assets path

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -1,4 +1,3 @@
-$govuk-fonts-path: "govuk-frontend/dist/govuk/assets/fonts/";
-$govuk-images-path: "govuk-frontend/dist/govuk/assets/rebrand/images/";
+$govuk-assets-path: "govuk-frontend/dist/govuk/assets/";
 @import "govuk-frontend/dist/govuk/index";
 @import "dropzone/src/dropzone";
