--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -1,3 +1,3 @@
-$govuk-assets-path: "govuk-frontend/dist/govuk/assets/rebrand";
+$govuk-assets-path: "/assets/";
 @import "govuk-frontend/dist/govuk/index";
 @import "dropzone/src/dropzone";
